--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
             <div class="port-row">
                 <div class="port-item">
                     <div class="port-img">
-                        <img src="Hanavo off.png">
+                        <img src="design.png">
                     </div>
                     <div class="port-info">
                         <h4>Affiche</h4>
